fixed images not fitting in tile

--- a/style/main.css
+++ b/style/main.css
@@ -386,106 +386,81 @@ hr {
     z-index: 10;
     font-size: 0px; }
   .tile.tile-2 .tile-inner {
-    background: none repeat scroll 0% 0% rgba(238, 228, 218, 0.35);
     background-image: url('../img/2.png');
     background-repeat: no-repeat;
     background-size: contain; 
-    background-position: right top;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
  }
   .tile.tile-4 .tile-inner {
-    background: none repeat scroll 0% 0% rgba(238, 228, 218, 0.35);
     background-image: url('../img/4.png');
     background-repeat: no-repeat;
-background-size: contain; 
-    background-position: right top;
+    background-size: contain; 
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-8 .tile-inner {
-    color: #f9f6f2;
-    background-size: contain; 
-    background: none repeat scroll 0% 0% rgba(238, 228, 218, 0.35);
     background-image: url('../img/8.png');
     background-repeat: no-repeat;
-background-size: contain; 
-    background-position: right top;}
-  .tile.tile-16 .tile-inner {
-    color: #f9f6f2;
     background-size: contain; 
-    background: none repeat scroll 0% 0% rgba(238, 228, 218, 0.35);
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
+}
+  .tile.tile-16 .tile-inner {
     background-image: url('../img/16.png');
     background-repeat: no-repeat;
-    background-position: right top;}
+    background-size: contain; 
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
+}
   .tile.tile-32 .tile-inner {
-    color: #f9f6f2;
-background-size: contain; 
-    background: none repeat scroll 0% 0% rgba(238, 228, 218, 0.35);
     background-image: url('../img/32.png');
     background-repeat: no-repeat;
-    background-position: right top;}
-  .tile.tile-64 .tile-inner {
     background-size: contain; 
-    color: #f9f6f2;
-    background: none repeat scroll 0% 0% rgba(238, 228, 218, 0.35);
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
+}
+  .tile.tile-64 .tile-inner {
     background-image: url('../img/64.png');
     background-repeat: no-repeat;
-    background-position: right top; }
-  .tile.tile-128 .tile-inner {
     background-size: contain; 
-    color: #f9f6f2;
-    background: none repeat scroll 0% 0% rgba(238, 228, 218, 0.35);
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
+}
+  .tile.tile-128 .tile-inner {
     background-image: url('../img/128.png');
     background-repeat: no-repeat;
-    background-position: right top;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
-    font-size: 0px; }
+    background-size: contain; 
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
     @media screen and (max-width: 520px) {
       .tile.tile-128 .tile-inner {
         font-size: 0px; } }
   .tile.tile-256 .tile-inner {
-    background-size: contain; 
-    color: #f9f6f2;
-    background: none repeat scroll 0% 0% rgba(238, 228, 218, 0.35);
     background-image: url('../img/256.png');
     background-repeat: no-repeat;
-    background-position: right top;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
-    font-size: 0px; }
+    background-size: contain; 
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
+    }
     @media screen and (max-width: 520px) {
       .tile.tile-256 .tile-inner {
         font-size: 0px; } }
   .tile.tile-512 .tile-inner {
-    background-size: contain; 
-    color: #f9f6f2;
-    background: none repeat scroll 0% 0% rgba(238, 228, 218, 0.35);
     background-image: url('../img/512.png');
     background-repeat: no-repeat;
-    background-position: right top;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
-    font-size: 0px; }
+    background-size: contain; 
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
+    }
     @media screen and (max-width: 520px) {
       .tile.tile-512 .tile-inner {
         font-size: 0px; } }
   .tile.tile-1024 .tile-inner {
-    color: #f9f6f2;
-    background-size: contain; 
-    background: none repeat scroll 0% 0% rgba(238, 228, 218, 0.35);
     background-image: url('../img/1024.png');
     background-repeat: no-repeat;
-    background-position: right top;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
-    font-size: 0px; }
+    background-size: contain; 
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
+    }
     @media screen and (max-width: 520px) {
       .tile.tile-1024 .tile-inner {
         font-size: 0px; } }
   .tile.tile-2048 .tile-inner {
-    background-size: contain; 
-    color: #f9f6f2;
-    background: none repeat scroll 0% 0% rgba(238, 228, 218, 0.35);
-    background-image: url('../img/2048.png');
+     background-image: url('../img/2048.png');
     background-repeat: no-repeat;
-    background-position: right top;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
-    font-size: 0px; }
+    background-size: contain; 
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
+    }
     @media screen and (max-width: 520px) {
       .tile.tile-2048 .tile-inner {
         font-size: 0px; } }
